--- a/130665/css/style.css
+++ b/130665/css/style.css
@@ -10,5 +10,15 @@ nav{
 header{
     background: palevioletred;
     width: 100%;
-    height: 60px;
+    height: 500px;
+}
+aside{
+    background: plum;
+    width: 30%;
+    height: 200px;
+}
+article{
+    background: rgb(131, 131, 241);
+    width: 30%;
+    height: 100px;
 }
